[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "timemachine-video-export"
version = "0.1.0"
description = "TimeMachine video export library for Breathecam timelapse cameras"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "CMU CREATE Lab"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "requests",
    "pandas>=1.0.0",
    "numpy",
    "pytz",
    "python-dateutil",
    "gspread",
    "oauth2client",
    "google-api-python-client",
    "psutil",
    "Pillow",
    "opencv-python-headless",
]

[project.optional-dependencies]
test = [
    "pytest",
    "opencv-python",
]

[project.scripts]
batch-video-exporter = "timemachine_video_export.batch_video_exporter:main"
timemachine-render = "timemachine_video_export.render_cli:main"
breathecam-thumbnail-export = "timemachine_video_export.breathecam_export_cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["timemachine_video_export*"]
